# custom-patches

./: .gitignore  Pipfile  README.rst  TODO.rst  custom-patches.py  custom_patches.py  requirements.txt  setup.cfg  tox.ini
custom_patches/: __init__.py  cli.py  pkgfind.py
gerrit_scripts/: __init__.py  custom_patches.py  downstream_branch.py  gerrit_api.py  gerritq.py  missing_projects.py  pkgfind.py  secnotes.py
