[metadata]
name = custom-patches
summary = Find missing patches between Gerrit branches
description-file =
    README.rst
author = Pavlo Shchelokovskyy
author-email = shchelokovskyy@gmail.com
home-page = http://pshchelo.github.io
classifier =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Gerrit
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[files]
packages =
    custom_patches

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    custom-patches = custom_patches.cli:main
    pkgfind = custom_patches.pkgfind:main

[wheel]
universal = 1
