[metadata]
name = gerrit-scripts
summary = Find missing patches between Gerrit branches
description-file =
    README.rst
author = Pavlo Shchelokovskyy
author-email = shchelokovskyy@gmail.com
home-page = https://pshchelo.github.io
classifier =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Gerrit
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[files]
packages =
    gerrit_scripts

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    custom-patches = gerrit_scripts.custom_patches:main
    pkgfind = gerrit_scripts.pkgfind:main
    missing-projects = gerrit_scripts.missing_projects:main
    downstream-branch = gerrit_scripts.downstream_branches:main

[wheel]
universal = 1
